Fix overflow issue, tweak padding and margins

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -206,20 +206,3 @@ footer {
     margin: 40px auto 80px;
   }
 }
-
-@media (min-width: 1000px) {
-  .plugins-overview,
-  .single-plugin-overview {
-    padding: 0 200px;
-  }
-
-  .single-plugin-detail .single-plugin-main {
-    width: 60%;
-  }
-
-  .single-plugin-detail .single-plugin-aside {
-    width: 37%;
-    border-left: 2px solid #62626e;
-    padding: 10px 0 0 10px;
-  }
-}
